@@ -4,6 +4,9 @@ trove.jar=lib/trove.jar
 # http://jcae.sourceforge.net/
 occjava.jar=lib/occjava.jar
 
+# http://jcae.sourceforge.net/
+jcae.jar=lib/jcae.jar
+
 # http://logging.apache.org/log4j/docs/
 log4j.jar=lib/log4j-1.2.8.jar
 
